<?xml version="1.0" encoding="utf-8"?>
<!--source: https://www.raywenderlich.com/126528/android-recyclerview-tutorial-->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Display the static main page -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_padding_left"
        android:paddingStart="@dimen/activity_padding_left"
        android:paddingRight="@dimen/activity_padding_right"
        android:paddingEnd="@dimen/activity_padding_right"
        android:paddingTop="@dimen/activity_padding_top"
        android:paddingBottom="@dimen/activity_padding_bottom"
        tools:context=".MainActivity">
        <!--<GridView-->
            <!--android:id="@+id/main_grid_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:adjustViewBounds="true"-->
            <!--android:columnWidth="@dimen/main_grid_column_width"-->
            <!--android:numColumns="auto_fit"-->
            <!--android:verticalSpacing="@dimen/main_grid_spacing"-->
            <!--android:horizontalSpacing="@dimen/main_grid_spacing"-->
            <!--android:padding="@dimen/main_grid_padding"-->
            <!--android:stretchMode="columnWidth"-->
            <!--android:gravity="center">-->
        <!--</GridView>-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </LinearLayout>

    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/left_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/left_drawer_white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/left_drawer_divider_height"/>
</android.support.v4.widget.DrawerLayout>