<?xml version="1.0" encoding="utf-8"?>
<!-- RecyclerView that displays recipe details -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/detail_ingredients_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/ingredients_title_padding_top"
        android:paddingBottom="@dimen/ingredients_title_padding_bottom"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:text="@string/ingredients_title"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/detail_ingredients_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ingredients_view_height"
        android:paddingStart="@dimen/ingredients_view_padding_left"
        android:paddingLeft="@dimen/ingredients_view_padding_left"
        android:paddingRight="@dimen/ingredients_view_padding_right"
        android:paddingEnd="@dimen/ingredients_view_padding_right">
    </android.support.v7.widget.RecyclerView>
    <TextView
        android:id="@+id/detail_steps_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/step_title_padding_top"
        android:paddingBottom="@dimen/step_title_padding_bottom"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:text="@string/steps_title"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/detail_steps_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/steps_view_padding_left"
        android:paddingLeft="@dimen/steps_view_padding_left"
        android:paddingRight="@dimen/steps_view_padding_right"
        android:paddingEnd="@dimen/steps_view_padding_right">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>