<?xml version="1.0" encoding="utf-8"?>
<!--https://github.com/udacity/AdvancedAndroid_ClassicalMusicQuiz-->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.jun.bakingrecipes.fragments.StepDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/player_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:resize_mode="fill"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_half"
        app:layout_constraintLeft_toLeftOf="parent" />
    <android.support.constraint.Guideline
        android:id="@+id/horizontal_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="307dp" />
    <TextView
        android:id="@+id/single_step_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_half"
        android:paddingTop="@dimen/step_title_padding_top"
        android:paddingBottom="@dimen/step_title_padding_bottom"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:text="@string/single_step_title"/>
    <TextView
        android:id="@+id/single_step_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/step_description_padding_top"
        android:paddingBottom="@dimen/step_description_padding_bottom"
        app:layout_constraintLeft_toLeftOf="@+id/single_step_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/single_step_detail_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:text="@string/fake_step_description"/>
    <Button
        android:id="@+id/previous_button"
        android:layout_width="@dimen/step_detail_button_width"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/previous_step_button"
        style="@style/TextAppearance.AppCompat.Subhead" />
    <Button
        android:id="@+id/next_button"
        android:layout_width="@dimen/step_detail_button_width"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/previous_button"
        app:layout_constraintLeft_toRightOf="@+id/previous_button"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/next_step_button"
        style="@style/TextAppearance.AppCompat.Subhead" />
</android.support.constraint.ConstraintLayout>






