<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_detail_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Display the static step detail page -->
    <LinearLayout
        android:id="@+id/step_detail_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_padding_left"
        android:paddingStart="@dimen/activity_padding_left"
        android:paddingRight="@dimen/activity_padding_right"
        android:paddingEnd="@dimen/activity_padding_right"
        android:paddingTop="@dimen/activity_padding_top"
        android:paddingBottom="@dimen/activity_padding_bottom"
        tools:context=".StepDetailActivity">
        <FrameLayout
            android:id="@+id/step_detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerInside"/>
    </LinearLayout>

    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/step_detail_left_drawer"
        android:layout_width="@dimen/left_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/left_drawer_white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/left_drawer_divider_height" />
</android.support.v4.widget.DrawerLayout>